# main-engine-processor

./: .env.example  Cargo.toml  Dockerfile  README.md
contracts/: approved_action.json
postgres/: init.sql
src/: config.rs  dlq_replay.rs  main.rs  pipeline.rs  queues.rs  test_helpers.rs  worker.rs
src/ai/: llm.rs
src/db/: mod.rs  neo4j.rs  pgvector.rs  postgres.rs
src/models/: approved_action.rs  mod.rs  voter_input.rs
